Update css for transform component to remove default browser scroll bar

--- a/src/components/TransformComponent.module.css
+++ b/src/components/TransformComponent.module.css
@@ -1,7 +1,7 @@
 .container {
   position: relative;
   width: fit-content;
-  height: fit-content;
+  height: auto;
   overflow: hidden;
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none; /* Safari */
